--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<input type="text" [(ngModel)] = "name"/>
-<p>{{ name }}</p>
+<!--<input type="text" [(ngModel)] = "name"/>-->
+<!--<p>{{ name }}</p>-->
+<h3>Test from root-component</h3>
+<!--<app-server></app-server> -->
+<app-servers></app-servers>
