updated css stylish

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!--<input type="text" [(ngModel)] = "name"/>-->
-<!--<p>{{ name }}</p>-->
-<h3>Test from root-component</h3>
-<!--<app-server></app-server> -->
-<app-servers></app-servers>
+<h1 id>This is form app component.html</h1>
+<h2 id="smallHeading">H2 content</h2>
+<div class="container">
+    <div class="row"><app-servers></app-servers></div>
+</div>
